--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -20,6 +20,9 @@ nav {
   padding: 0;
   box-sizing: border-box;
   list-style:none;
+  .right {
+    float: right;
+  }
   li {
     display: inline-block;
     padding: 0;
