--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,16 +2,9 @@
   <div class="container">
     <ul class="main-menu">
       <li> <%= link_to "Store Home", store_path %> </li>
-      <% if !!@cart %>
-        <li> <%= link_to "Cart", cart_path(current_cart) %></li>
-      <% end %>
-      <% if user_signed_in? %>
-        <li class="right">Signed in as <%= current_user.email %></li>
-        <li class="right"><%= link_to "Sign out", destroy_user_session_path, method: :delete %></li>
-      <% else %> 
-        <li class="right"><%= link_to "sign in", new_user_session_path %></li>
-        <li class="right"><%= link_to "Sign up", new_user_registration_path %></li>
-      <% end %>
+      <%= nav_cart %>
+      <%= nav_session_links %>
+      
       
     </ul>
   </div>    
