--- a/app/views/store/index.html.erb
+++ b/app/views/store/index.html.erb
@@ -1,7 +1,10 @@
-<% @categories.each do |category| %>
-  <%= link_to category.title, category_path(category) %>
-<% end %>
+<div class="categories">
+  <%= category_list(@categories) %>
+</div>
 
-<% @items.each do |item| %>
-  <p><%= item.title %> | <%= number_to_currency(item.price) %> | <%= button_to 'Add to Cart', line_items_path(item_id: item) %></p>
-<% end %>
+<h2>Items</h2>
+<div class="items">
+  <% @items.each do |item| %>
+    <p><%= item.title %> | <%= item_price(item) %> | <%= add_to_cart(item) %></p>
+  <% end %>
+</div>
